added jumbotron section and pic

--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
       </ul>
     </nav>
   </header>
+
+  <main>
+    <section id="jumbotron-pic">
+      <h1 class="jumbotron-title">Shop til you drop</h1>
+      <p>Everything half off for the holidays! huryy while supplies last.</p>
+    </section>
+  </main>
 </body>
 </html>
