change header brand color, font style and size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <title>SHOP</title>
@@ -13,7 +13,7 @@
   
   <header class="main-header">
     <div>
-      <a href="index.html" class="main-header__brand">SHOP</a>
+      <a href="index.html" class="main-header__brand">ShopGirl</a>
     </div>
 
     <nav class="main-nav">
