added top header for social icons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
   
+  <div class="top-header">
+    <h5>
+      some info on top with socials
+    </h5></div>
   <header class="main-header">
     <div>
       <a href="index.html" class="main-header__brand">ShopGirl</a>
