added footer to html

--- a/index.html
+++ b/index.html
@@ -44,5 +44,17 @@
       <p>Everything half off for the holidays! huryy while supplies last.</p>
     </section>
   </main>
+
+<footer id="main-footer">
+  <ul class="main-footer__links">
+    <li class="main-footer__link">
+      <a href="#">Support</a>
+    </li>
+    <li class="main-footer__link">
+      <a href="#">Contact</a>
+    </li>
+  </ul>
+</footer>
+
 </body>
 </html>
